--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@toolpad/core": "^0.15.0",
     "dayjs": "^1.11.13",
     "modern-normalize": "^3.0.1",
+    "nanoid": "^5.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
